<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/cork_green" >

    <TextView
        android:id="@+id/player_name"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
		android:textColor="#FFFFFF" />
    
    <ScrollView
    	android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_weight="7"
    	android:paddingTop="@dimen/activity_vertical_margin"
    	android:paddingBottom="@dimen/activity_vertical_margin" >
    
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
	    
		    <LinearLayout 
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:gravity="center_vertical">
		
		        <TextView
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="4"
		            android:text="@string/string_15"
		            android:textAppearance="?android:attr/textAppearanceLarge"
		            android:textColor="#FFFFFF" />
		
		        <Button
		            android:id="@+id/btn_sub_15"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:onClick="subFromScore"
		            android:background="@drawable/minus_white_button" />
		
		        <TextView
		            android:id="@+id/text_15s"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="2"
		            android:gravity="center"
		            android:textAppearance="?android:attr/textAppearanceLarge"
		            android:textColor="#FFFFFF" />

		        <Button
		            android:id="@+id/btn_add_15"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:onClick="addToScore"
		            android:background="@drawable/plus_white_button" />
		        
		    </LinearLayout>
		    
		    <LinearLayout 
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:gravity="center_vertical">
		
		        <TextView
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="4"
		            android:text="@string/string_16"
		            android:textAppearance="?android:attr/textAppearanceLarge"
		            android:textColor="#FFFFFF" />
		
		        <Button
		            android:id="@+id/btn_sub_16"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:onClick="subFromScore"
		            android:background="@drawable/minus_white_button" />
		
		        <TextView
		            android:id="@+id/text_16s"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="2"
		            android:gravity="center"
		            android:textAppearance="?android:attr/textAppearanceLarge"
		            android:textColor="#FFFFFF" />
		
		        <Button
		            android:id="@+id/btn_add_16"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:onClick="addToScore"
		            android:background="@drawable/plus_white_button" />
		        
		    </LinearLayout>
		    
		    <LinearLayout 
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:gravity="center_vertical">
		
		        <TextView
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="4"
		            android:text="@string/string_17"
		            android:textAppearance="?android:attr/textAppearanceLarge"
		            android:textColor="#FFFFFF" />
		
		        <Button
		            android:id="@+id/btn_sub_17"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:onClick="subFromScore"
		            android:background="@drawable/minus_white_button" />
		
		        <TextView
		            android:id="@+id/text_17s"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="2"
		            android:gravity="center"
		            android:textAppearance="?android:attr/textAppearanceLarge"
		            android:textColor="#FFFFFF" />
		
		        <Button
		            android:id="@+id/btn_add_17"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:onClick="addToScore"
		            android:background="@drawable/plus_white_button" />
		        
		    </LinearLayout>
		    
		    <LinearLayout 
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:gravity="center_vertical">
		
		        <TextView
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="4"
		            android:text="@string/string_18"
		            android:textAppearance="?android:attr/textAppearanceLarge"
		            android:textColor="#FFFFFF" />
		
		        <Button
		            android:id="@+id/btn_sub_18"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:onClick="subFromScore"
		            android:background="@drawable/minus_white_button" />
		
		        <TextView
		            android:id="@+id/text_18s"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="2"
		            android:gravity="center"
		            android:textAppearance="?android:attr/textAppearanceLarge"
		            android:textColor="#FFFFFF" />
		
		        <Button
		            android:id="@+id/btn_add_18"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:onClick="addToScore"
		            android:background="@drawable/plus_white_button" />
		        
		    </LinearLayout>
		    
		    <LinearLayout 
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:gravity="center_vertical">
		
		        <TextView
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="4"
		            android:text="@string/string_19"
		            android:textAppearance="?android:attr/textAppearanceLarge"
		            android:textColor="#FFFFFF" />
		
		        <Button
		            android:id="@+id/btn_sub_19"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:onClick="subFromScore"
		            android:background="@drawable/minus_white_button" />
		
		        <TextView
		            android:id="@+id/text_19s"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="2"
		            android:gravity="center"
		            android:textAppearance="?android:attr/textAppearanceLarge"
		            android:textColor="#FFFFFF" />
		
		        <Button
		            android:id="@+id/btn_add_19"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:onClick="addToScore"
		            android:background="@drawable/plus_white_button" />
		        
		    </LinearLayout>
		    
		    <LinearLayout 
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:gravity="center_vertical">
		
		        <TextView
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="4"
		            android:text="@string/string_20"
		            android:textAppearance="?android:attr/textAppearanceLarge"
		            android:textColor="#FFFFFF" />
		
		        <Button
		            android:id="@+id/btn_sub_20"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:onClick="subFromScore"
		            android:background="@drawable/minus_white_button" />
		
		        <TextView
		            android:id="@+id/text_20s"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="2"
		            android:gravity="center"
		            android:textAppearance="?android:attr/textAppearanceLarge"
		            android:textColor="#FFFFFF" />
		
		        <Button
		            android:id="@+id/btn_add_20"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:onClick="addToScore"
		            android:background="@drawable/plus_white_button" />
		        
		    </LinearLayout>
		    
		    <LinearLayout 
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:gravity="center_vertical">
		
		        <TextView
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="4"
		            android:text="@string/string_B"
		            android:textAppearance="?android:attr/textAppearanceLarge"
		            android:textColor="#FFFFFF" />
		
		        <Button
		            android:id="@+id/btn_sub_B"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:onClick="subFromScore"
		            android:background="@drawable/minus_white_button" />
		
		        <TextView
		            android:id="@+id/text_Bs"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="2"
		            android:gravity="center"
		            android:textAppearance="?android:attr/textAppearanceLarge"
		            android:textColor="#FFFFFF" />
		
		        <Button
		            android:id="@+id/btn_add_B"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:onClick="addToScore"
		            android:background="@drawable/plus_white_button" />
		        
		    </LinearLayout>
		
		</LinearLayout>
    
	</ScrollView>
	
    <Button
        android:id="@+id/enter_score_btn"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="enterScore"
        android:text="@string/enter_score"
        android:textColor="#FFFFFF"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="#4F4F4c" />

</LinearLayout>